<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infinite Unit Circle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="button_website">Website</string>
    <string name="donate_button">Donate</string>
    <string name="discription_button">My name is Chad Cabrera and I am a former math teacher trying to become a software developer. I have made this app free of charge so that students and teachers have a tool that goes beyond 360 degrees. To see other apps that I have developed please visit my website. If you find any of my apps useful please donate.</string>
    <string name="email_button">Chad187@gmail.com</string>
    <string name="image_description">Image of the developer with his two young daughters</string>
    <string name="info_button">Info</string>
    <string name="donate_success">Thank You!</string>
    <string name="donate_fail">Error, thanks for trying</string>
    <string name="donate_default">did not start consume</string>
    <string name="title_activity_donation_page">DonationPage</string>
    <string name="back">Back</string>

</resources>
