<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cc.infiniteunitcircle.DonationPage"
    android:id="@+id/donate_frame"
    android:scrollbars="horizontal|vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_gravity="fill"
        android:scrollbars="horizontal|vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@mipmap/dadgirls"
            android:contentDescription="@string/image_description"
            android:layout_above="@+id/textView"
            android:layout_toLeftOf="@+id/button"
            android:layout_toStartOf="@+id/button"
            android:layout_gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discription_button"
            android:id="@+id/textView3"
            android:layout_column="1"
            android:autoText="false"
            android:layout_row="0"
            android:layout_above="@+id/button"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_button"
            android:id="@+id/textView4"
            android:autoLink="email"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_above="@+id/button"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_weight="0.12" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:measureWithLargestChild="false"
            android:keepScreenOn="false"
            android:fitsSystemWindows="false"
            android:filterTouchesWhenObscured="false">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/button5"
                android:layout_gravity="left|center_vertical"
                android:background="#ff0098cb"
                android:textColor="#fff1f3f4"
                android:onClick="backButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="42dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_website"
                android:id="@+id/button3"
                android:background="#ff0098cb"
                android:enabled="true"
                android:clickable="true"
                android:autoLink="web"
                android:onClick="webButton"
                android:textColor="#fff1f3f4"
                android:layout_gravity="center"
                android:ellipsize="none"
                android:layout_alignTop="@+id/button4"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_button"
                android:id="@+id/button4"
                android:background="#ff0098cb"
                android:clickable="true"
                android:enabled="true"
                android:onClick="donations"
                android:textColor="#fff1f3f4"
                android:layout_gravity="center|right"
                android:textSize="16sp"
                android:scrollbars="vertical"
                android:layout_alignTop="@+id/button5"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
