<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cc.infiniteunitcircle.AboutMe"
    android:rowOrderPreserved="false"
    android:columnOrderPreserved="false"
    android:columnCount="2"
    android:rowCount="2"
    android:id="@+id/R"><![CDATA[





    EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:text="@string/email_button"
        android:autoLink="email"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />





























    ]]>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="189dp"
            android:id="@+id/imageView"
            android:src="@mipmap/dadgirls"
            android:contentDescription="@string/image_description"
            android:layout_above="@+id/textView"
            android:layout_toLeftOf="@+id/button"
            android:layout_toStartOf="@+id/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_button"
            android:id="@+id/textView2"
            android:autoLink="email"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_above="@+id/button"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginBottom="42dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_button"
            android:id="@+id/button"
            android:background="#ff0098cb"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/textView"
            android:enabled="true"
            android:onClick="donations"
            android:textColor="#fff1f3f4"
            android:layout_toRightOf="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_website"
            android:id="@+id/button2"
            android:background="#ff0098cb"
            android:layout_alignTop="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_row="4"
            android:layout_column="0"
            android:enabled="true"
            android:clickable="true"
            android:autoLink="web"
            android:onClick="webButton"
            android:textColor="#fff1f3f4" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/arrow_left"
            android:layout_toStartOf="@+id/button2"
            android:layout_marginEnd="58dp"
            android:layout_toLeftOf="@+id/button2"
            android:layout_alignTop="@+id/button2"
            android:layout_row="5"
            android:layout_column="0"
            android:onClick="backButton"
            android:clickable="true"
            android:layout_marginRight="58dp" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/discription_button"
            android:id="@+id/textView"
            android:layout_column="1"
            android:autoText="false"
            android:layout_row="0"
            android:layout_above="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="77dp" />
    </RelativeLayout><![CDATA[















    />








]]>
</GridLayout>
